Made some style tweaks to the employers page to move the filters into a sidebar when authorized.

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -1,4 +1,13 @@
 #employers-view
+  .artisanal-claim
+    font-variant: small-caps
+    text-align: center
+    font-size: 20px
+    font-weight: bold
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy
+    border-top: 1px solid #DBDBDB
+    border-bottom: 1px solid #DBDBDB
+    margin-bottom: 5px
 
   .employer-button
     background: #fce232 /* Old browsers */
@@ -14,13 +23,17 @@
     
   //filter panels
   #filter
+    border: 2px solid #CBCBCB
     margin-bottom: 10px
     .panel-heading
-      background-color: darkgrey
+      background-color: #D9D9D9
       cursor: pointer
+      border-top-left-radius: 0px
+      border-top-right-radius: 0px
+      #folder-icon
+        margin-right: 5px
     .panel-body
-      background-color: darkgrey
-      border-radius: 4px
+      background-color: #D9D9D9
       border-top-left-radius: 0px
       border-top-right-radius: 0px
     .panel
@@ -28,13 +41,24 @@
       border-radius: 0px
      
   #filters
+    margin-bottom: 10px
     .filter_section
-      width: 25%
+      min-width: 25%
+      margin-right: 10px
       display: inline-block
       vertical-align: top
-    margin-bottom: 10px
-    label input
-      margin-right: 10px
+
+    h4
+      margin-bottom: 5px
+
+    label
+      display: block
+      font-weight: normal
+      margin-bottom: 0
+      cursor: pointer
+      input
+        margin-right: 5px
+
   .get-started-button
     vertical-align: text-bottom
     margin-left: 10px
@@ -82,7 +106,6 @@
       height: 150px
       padding-right: 15px
     
-
     .reason
       width: 33%
       padding-left: 3%
@@ -108,9 +131,6 @@
   #bottom_row
     height: auto
   #candidate-table
-    width: 96%
-    margin-left: 2%
-    margin-right: 2%
     background-color: #E7E7E7
     table
       cursor: pointer
@@ -118,49 +138,48 @@
       margin-left: 2%
       margin-right: 2%
       margin-bottom: 30px
-      .tag_column
-        width: 25%
+      .tag_column, .location_column, .education_column, .work_column
+        width: 33%
         display: inline-block
-      .location_column
-        display: inline-block
-        width: 25%
-      .education_column
-        display: inline-block
-        width: 25%
-      .work_column
-        display: inline-block
-        width: 25%
+        img
+          margin-right: 5px
+          vertical-align: top
       tr 
         .candidate-picture
-          width: 50px
-          height: 50px
+          width: 100px
+          height: 100px
           border-radius: 5px
           overflow: hidden
           margin-right: 10px
+          img
+            border-radius: 5px
           
         .candidate-description
           width: 100%
           vertical-align: bottom
-      td
-        margin-bottom: 10px
-        margin-top: 10px
+      td.candidate-description
         padding-bottom: 5px
-        padding-top: 10px
-      .candidate-name-cell
-        position: relative
-        top: 10px
-        //refactor later, bad practice
-        
-        
+      td.candidate-name-cell
+        padding-top: 15px
+        padding-bottom: 5px
+        font-size: 18px
+
       .border_row
         border-bottom: 1px solid #d3d3d3
         vertical-align: bottom
         td
-          padding-top: 0px
-          padding-bottom: 5px
-      .description_row td
-        padding-bottom: 0px
+          padding-top: 5px
+          padding-bottom: 15px
+
+  .teaser-profiles #candidate-table table
+    .tag_column, .location_column, .education_column, .work_column
+      width: 25%
+    tr
+      .candidate-description
         padding-top: 15px
+      .candidate-picture
+        width: 50px
+        height: 50px
       
   #results
     display: inline-block
