Added case and demo for user not found. Should be made prettier as soon as users can be queried by name

--- a/app/templates/kinds/user.jade
+++ b/app/templates/kinds/user.jade
@@ -3,10 +3,14 @@ extends /templates/base
 // User pages might have some user page specific header, if not remove this
 block content
   div
-    ol.breadcrumb
-      li
-        - var userName = user.get('name');
-        a(href="/user/#{user.id}") #{userName}
-      li.active
-        | #{currentUserView}
+    if user
+      ol.breadcrumb
+        li
+          - var userName = user.get('name');
+          a(href="/user/#{user.id}") #{userName}
+        li.active
+          | #{currentUserView}
+    else
+      // TODO Ruben make this all fancy as soon as we can query users by name
+      | User not found.
 
