--- a/app/styles/play/level/tome/tome.sass
+++ b/app/styles/play/level/tome/tome.sass
@@ -37,9 +37,8 @@
 
   .popover
     padding: 10px 10px 30px 10px
-    background: transparent url(/images/level/popover_background.png)
-    background-size: 100% 100%
-    border: 0
+    border-image: url(/images/level/popover_background.png) 18 fill round
+    border-width: 15px
     @include box-shadow(0 0 0 #000)
 
     h1:not(.not-code), h2:not(.not-code), h3:not(.not-code), h4:not(.not-code), h5:not(.not-code), h6:not(.not-code)
@@ -70,3 +69,10 @@
   pre
     display: inline-block
     padding: 5px
+
+html.no-borderimage
+  #tome-view
+    .popover
+      background: transparent url(/images/level/popover_background.png)
+      background-size: 100% 100%
+      border: 0
