--- a/app/templates/editor/level/components_tab.jade
+++ b/app/templates/editor/level/components_tab.jade
@@ -6,7 +6,7 @@
     #components-treema.nano-content
 
 .edit-component-container
-  if me.isAdmin()
+  if !me.get('anonymous')
     button.btn.btn-primary#create-new-component-button-no-select
       span.icon-plus
       span.text(data-i18n="editor.level_component_btn_new") Create New Component
