new Documentation page

--- a/app/styles/docs/components.sass
+++ b/app/styles/docs/components.sass
@@ -1,2 +1,30 @@
 #docs-components-view
   color: saddlebrown
+
+.main
+  position : relative
+
+  .left
+    bottom: 10em
+    left: 10em
+    overflow-y: scroll
+    overflow-x: hidden
+    position: fixed
+    top: 5em
+    white-space: nowrap
+    width: 20%
+    -webkit-overflow-scrolling: touch
+
+  .right
+    left: 28em
+    bottom: 10em
+    position: fixed
+    overflow-y: scroll
+    overflow-x: hidden
+    right: 10em
+    top: 5em
+    //width: 80%
+    -webkit-overflow-scrolling: touch
+
+    .specialList
+      list-style-type: none
