GET /auth/name/<name> now serves possible free names
anonymous users are now warned if their new name is already chosen

User Settings is now without auto-save

Upon name conflict, a user will be suggested a new name which is then submitted if the user chooses to save after all.

Refactored conflicted name checking so it can be used in more places

Signup form now has an optional name field

Covered extra case where the debounced check happened too late. Support for submitting on enter.

Worked in scott's comments and got tests working again

--- a/app/templates/account/settings.jade
+++ b/app/templates/account/settings.jade
@@ -9,7 +9,7 @@ block content
 
   else
     #save-button-container
-      button.btn#save-button.disabled.secret(data-i18n="account_settings.autosave") Changes Save Automatically
+      button.btn#save-button.disabled(data-i18n="general.save" disabled="true") No Changes
   
     ul.nav.nav-pills#settings-tabs
       li
@@ -30,16 +30,19 @@ block content
       #general-pane.tab-pane
         p
           .form
+            - var name = me.get('name') || '';
+            - var email = me.get('email');
+            - var admin = me.get('permissions').indexOf('admin') != -1;
             .form-group
               label.control-label(for="name", data-i18n="general.name") Name
-              input#name.form-control(name="name", type="text", value="#{me.get('name') || ''}")
+              input#name.form-control(name="name", type="text", value="#{name}")
             .form-group
               label.control-label(for="email", data-i18n="general.email") Email
-              input#email.form-control(name="email", type="text", value="#{me.get('email')}")
+              input#email.form-control(name="email", type="text", value="#{email}")
             if !isProduction
               .form-group.checkbox
                 label(for="admin", data-i18n="account_settings.admin") Admin
-                input#admin(name="admin", type="checkbox", checked=me.get('permissions').indexOf('admin') != -1)
+                input#admin(name="admin", type="checkbox", checked=admin)
               
   
       #picture-pane.tab-pane
