Removes okay button, hides modal upon generation

--- a/app/templates/modal/terrain_randomise.jade
+++ b/app/templates/modal/terrain_randomise.jade
@@ -12,3 +12,4 @@ block modal-body-content
           div.preset-name
             span(data-i18n="ladder.grassy") Grassy
     //- for model in models
+block modal-footer
