Changed employer artisanal message font

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -1,10 +1,10 @@
 #employers-view
   .artisanal-claim
-    font-variant: small-caps
+    //font-variant: small-caps
     text-align: center
     font-size: 20px
     font-weight: bold
-    font-family: Copperplate, "Copperplate Gothic Light", fantasy
+    font-family: Arial, Helvetica, sans-serif
     border-top: 1px solid #DBDBDB
     border-bottom: 1px solid #DBDBDB
     margin-bottom: 5px
