--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -70,17 +70,17 @@ block header
               a#level-watch-button
                 span.watch
                   span.glyphicon.glyphicon-eye-open
-                  span.spl Watch
+                  span.spl(data-i18n="common.watch") Watch
                 span.unwatch.secret
                   span.glyphicon.glyphicon-eye-close
-                  span.spl Unwatch
+                  span.spl(data-i18n="common.unwatch") Unwatch
                   
             li(class=anonymous ? "disabled": "")
               a(data-i18n="common.fork")#fork-level-start-button Fork
             li(class=anonymous ? "disabled": "")
               a(data-toggle="coco-modal", data-target="modal/revert", data-i18n="editor.revert")#revert-button Revert
             li(class=anonymous ? "disabled": "")
-              a(data-toggle="coco-modal", data-target="modal/terrain_randomise", data-i18n="editor.randomise")#randomise-button Randomise
+              a(data-toggle="coco-modal", data-target="modal/terrain_randomise", data-i18n="editor.randomize")#randomise-button Randomise
             li(class=anonymous ? "disabled": "")
               a(data-i18n="editor.pop_i18n")#pop-level-i18n-button Populate i18n
             li.divider
