Updates i18n tags and en.coffee

--- a/app/templates/modal/terrain_randomise.jade
+++ b/app/templates/modal/terrain_randomise.jade
@@ -8,8 +8,8 @@ block modal-body-content
     a(href="#")
         div.choose-option(data-preset-type="grassy", data-preset-size="small")
           div.preset-size.name-label
-            span(data-i18n="ladder.small") Small
+            span(data-i18n="editor.small") Small
           div.preset-name
-            span(data-i18n="ladder.grassy") Grassy
+            span(data-i18n="editor.grassy") Grassy
     //- for model in models
 block modal-footer
