Bootstrappified Wizard Settings modal

--- a/app/styles/modal/wizard_settings.sass
+++ b/app/styles/modal/wizard_settings.sass
@@ -9,9 +9,9 @@
     display: block
     float: none
     background: white
-    
-  .wizard-name-line
+
+  #wizard-settings-name-wrapper
+    padding-left: 0px !important
+
+  .help-block
     text-align: center
-    margin-bottom: 10px
-    label
-      margin-right: 10px
