--- a/app/templates/modal/wizard_settings.jade
+++ b/app/templates/modal/wizard_settings.jade
@@ -4,10 +4,13 @@ block modal-header-content
   h3(data-i18n="wizard_settings.title2") Customize Your Character
 
 block modal-body-content
-  div.wizard-name-line.form-group
-    label.control-label(for="name")
-      | Your Wizardly Name:
-    input#wizard-settings-name(name="name", type="text", value="#{me.get('name')||''}")
+  form.form-horizontal
+    div.form-group
+      .row
+        label.control-label.col-sm-6(for="name")
+          | Your Wizardly Name:
+        #wizard-settings-name-wrapper.col-sm-4
+          input#wizard-settings-name.form-control.input-sm(name="name", type="text", value="#{me.get('name')||''}")
 
   #wizard-settings-view
 
