Starting to show opponent code languages.

--- a/app/templates/play/ladder/play_modal.jade
+++ b/app/templates/play/ladder/play_modal.jade
@@ -33,6 +33,7 @@ block modal-body-content
           span= myName
         div.opponent-name.name-label
           span(data-i18n="ladder.simple_ai") Simple AI
+          //span.code-language(style="background-image: url(/images/pages/home/language_logo_javascript.png)")
         div.difficulty
           span(data-i18n="ladder.warmup") Warmup
         div(data-i18n="ladder.vs").vs VS
@@ -48,6 +49,8 @@ block modal-body-content
             span= myName
           div.opponent-name.name-label
             span= challengers.easy.opponentName
+            if challengers.easy.codeLanguage
+              span.code-language(style="background-image: url(/images/pages/home/language_logo_" + challengers.easy.codeLanguage + ".png)")
           div.difficulty
             span(data-i18n="general.easy") Easy
           div(data-i18n="ladder.vs").vs VS
@@ -63,6 +66,8 @@ block modal-body-content
             span= myName
           div.opponent-name.name-label
             span= challengers.medium.opponentName
+            if challengers.medium.codeLanguage
+              span.code-language(style="background-image: url(/images/pages/home/language_logo_" + challengers.medium.codeLanguage + ".png)")
           div.difficulty
             span(data-i18n="general.medium") Medium
           div(data-i18n="ladder.vs").vs VS
@@ -78,6 +83,8 @@ block modal-body-content
             span= myName
           div.opponent-name.name-label
             span= challengers.hard.opponentName
+            if challengers.hard.codeLanguage
+              span.code-language(style="background-image: url(/images/pages/home/language_logo_" + challengers.hard.codeLanguage + ".png)")
           div.difficulty
             span(data-i18n="general.hard") Hard
           div(data-i18n="ladder.vs").vs VS
