--- a/app/styles/play/ladder/ladder_tab.sass
+++ b/app/styles/play/ladder/ladder_tab.sass
@@ -50,3 +50,9 @@
 
   td
     padding: 1px 2px
+
+  .code-language-cell
+    padding: 0 10px
+    background: transparent url(/images/pages/home/language_logo_javascript.png) no-repeat center center
+    background-size: contain
+    height: 19px
