--- a/app/styles/play/ladder/play_modal.sass
+++ b/app/styles/play/ladder/play_modal.sass
@@ -95,7 +95,17 @@
     span
       position: relative
       top: 1px
-      
+
+    .code-language
+      position: absolute
+      background: transparent url(/images/pages/home/language_logo_javascript.png) no-repeat center center
+      background-size: contain
+      width: 40px
+      height: 40px
+      right: -5px
+      top: -15px
+      display: block
+
   .my-name
     border-right: 15px solid transparent
     left: 0
