Navbar refactored, starting to look good already.

--- a/app/styles/common/top_nav.sass
+++ b/app/styles/common/top_nav.sass
@@ -22,6 +22,30 @@
 
   .glyphicon-user
     font-size: 16px
+    margin-right: 5px
+
+  //#9F915B
+  //#E4CF8C
+  .dropdown
+    .dropdown-menu
+      right: 0
+      left: auto
+      width: 280px
+      padding: 0px
+
+      li.user-dropdown-header
+        background: #E4CF8C
+        height: 175px
+        padding: 10px
+        text-align: center
+
+        img
+          border: #e3be7a 8px solid
+
+      li.user-dropdown-body
+        // placeholder
+      li.user-dropdown-footer
+        // placeholder
 
   .nav.navbar-link-text, .nav.navbar-link-text > li > a
     font-weight: normal
