--- a/app/templates/base.jade
+++ b/app/templates/base.jade
@@ -27,17 +27,16 @@ body
 
         select.language-dropdown
 
-        if me.get('anonymous') === false
-          button.btn.btn-primary.navbuttontext.header-font#logout-button(data-i18n="login.log_out") Log Out
-          a.btn.btn-primary.navbuttontext.header-font(href=me.get('jobProfile') ? "/account/profile/#{me.id}" : "/account/settings")
+          //button.btn.btn-primary.navbuttontext.header-font#logout-button(data-i18n="login.log_out") Log Out
+          //a.btn.btn-primary.navbuttontext.header-font(href=me.get('jobProfile') ? "/account/profile/#{me.id}" : "/account/settings")
             div.navbuttontext-account(data-i18n="nav.account") Account
             if me.get('photoURL')
               img.account-settings-image(src=me.getPhotoURL(18), alt="")
             else
               span.glyphicon.glyphicon-user
 
-        else
-          button.btn.btn-primary.navbuttontext.header-font.auth-button 
+        //else
+          button.btn.btn-primary.navbuttontext.header-font.auth-button
             span(data-i18n="login.log_in") Log In
             span.spr.spl /
             span(data-i18n="login.sign_up") Create Account
@@ -47,6 +46,27 @@ body
             a.header-font(href='/play', data-i18n="nav.play") Levels
           li
             a.header-font(href='/community', data-i18n="nav.community") Community
+          if me.get('anonymous') === false
+            li.dropdown
+              button.btn.btn-primary.navbuttontext.header-font.dropdown-toggle(href="#", data-toggle="dropdown")
+                if me.get('photoURL')
+                  img.account-settings-image(src=me.getPhotoURL(18), alt="")
+                else
+                  i.glyphicon.glyphicon-user
+                .navbuttontext-account(data-i18n="nav.account") Account
+                span.caret
+              ul.dropdown-menu(role="menu")
+                li.user-dropdown-header
+                  img.img-circle(src="#{me.getPhotoURL()}" alt="")
+                  p Lorem Ipsum
+                li.user-dropdown-body
+                  .col-xs-4.text-center
+                    Profile
+                  .col-xs-4.text-center
+                    Statistics
+                  .col-xs-4.text-center
+                    Code
+                li.user-dropdown-footer
 
   block outer_content
     #outer-content-wrapper
