Don't ask for team again if we already have a child window.

--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -49,7 +49,7 @@ block header
         
         if level.get('type') === 'ladder'
           li.dropdown
-            a(data-toggle='dropdown')
+            a(data-toggle='dropdown').play-with-team-parent
               span.glyphicon-play.glyphicon
             ul.dropdown-menu
               li.dropdown-header Play As Which Team?
