docs page update

--- a/app/styles/docs/components.sass
+++ b/app/styles/docs/components.sass
@@ -3,16 +3,23 @@
 
   .row
 
+
+
     .index-column, .documentation-column
-      overflow-y: scroll
       overflow-x: hidden
       min-height: 600px
 
       > ul
         padding: 0px 20px 20px 20px
 
+      .doc-name
+        color: rgb(139, 69, 19)
+
   
     .documentation-column
   
       .specialList
+        list-style-type: none
+
+      .doc-description
         list-style-type: none
