--- a/app/templates/modal/recover.jade
+++ b/app/templates/modal/recover.jade
@@ -4,7 +4,7 @@ block modal-header-content
   h3(data-i18n="recover.recover_account_title") Recover Account
 
 block modal-body-content
-  .form-inline
+  .form
     .form-group
       label.control-label(for="recover-email", data-i18n="general.email") Email     
       input#recover-email.input-large.form-control(name="email", type="email")
